--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:es": "tsc",
     "build:lib": "babel es --out-dir lib && cpx \"es/*.d.ts\" lib",
     "build": "npm run build:es && npm run build:lib",
-    "prepublish": "npm run clean && npm run lint && npm run build"
+    "prepublish": "npm run clean && npm run lint && npm test && npm run build"
   },
   "keywords": [
     "redux",
@@ -35,8 +35,8 @@
     "redux": "^3.6.0",
     "rimraf": "^2.6.1",
     "tape": "^4.6.3",
-    "ts-node": "^3.0.2",
-    "tslint": "^4.5.1",
-    "typescript": "^2.2.2"
+    "ts-node": "^6.1.1",
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.1"
   }
 }
